--- a/node-api/package.json
+++ b/node-api/package.json
@@ -1,16 +1,19 @@
 {
   "name": "nodeapi",
+  "type": "module",
   "version": "1.0.0",
   "description": "Maln-backend",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "Tx10",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
+    "mongodb": "^5.6.0",
     "nodemon": "^2.0.22"
   }
 }
