--- a/node-api/package.json
+++ b/node-api/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongodb": "^5.6.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
